# tauri-plugin-cors-fetch

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs
example/: index.html  package.json  pnpm-lock.yaml
example/public/: style.css
example/src/: index.html  main.js
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: main.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: fetch_cancel_body.toml
permissions/schemas/: schema.json
src/: commands.rs  cookies.rs  cors.rs  error.rs  lib.rs  script.rs
