[package]
name = "tauri-plugin-cors-fetch"
version = "2.0.0"
description = "Enabling Cross-Origin Resource Sharing (CORS) for Fetch Requests within Tauri applications."
keywords = ["tauri-plugin", "CORS", "fetch", "unofficial"]
authors = [ "Del Wang <hello@xbox.work>" ]
repository = "https://github.com/idootop/tauri-plugin-cors-fetch"
documentation = "https://docs.rs/tauri-plugin-cors-fetch"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70"
links = "tauri-plugin-cors-fetch"

[dependencies]
tauri = "2.0.0-beta.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
http = "0.2"
reqwest = "0.11"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["macros"] }

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.9", features = ["build"] }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]