[package]
name = "tauri-plugin-cors-fetch"
version = "3.0.0"
description = "Enabling Cross-Origin Resource Sharing (CORS) for Fetch Requests within Tauri applications."
keywords = ["tauri-plugin", "CORS", "fetch", "unofficial"]
authors = ["Del Wang <hello@xbox.work>"]
repository = "https://github.com/idootop/tauri-plugin-cors-fetch"
documentation = "https://docs.rs/crate/tauri-plugin-cors-fetch"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-cors-fetch"


[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }

[dependencies]
tauri = "2"
serde = "1"
serde_json = "1"
thiserror = "2"
url = "2"
http = "1"
reqwest = { version = "0.12", default-features = false }
once_cell = "1"
tokio = { version = "1", features = ["macros"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [
    "rustls-tls",
    "http2",
    "charset",
    "macos-system-configuration",
    "cookies",
]
multipart = ["reqwest/multipart"]
json = ["reqwest/json"]
stream = ["reqwest/stream"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
blocking = ["reqwest/blocking"]
cookies = ["reqwest/cookies"]
gzip = ["reqwest/gzip"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
trust-dns = ["reqwest/trust-dns"]
socks = ["reqwest/socks"]
http2 = ["reqwest/http2"]
charset = ["reqwest/charset"]
macos-system-configuration = ["reqwest/macos-system-configuration"]
