[package]
name = "example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-cors-fetch = { git = "https://github.com/idootop/tauri-plugin-cors-fetch", rev = "336110e5b6bf9f301a81622c36d2ec1d67637a29" }


